--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
     </section>
      
-    <footer class="flex justify-center items-center bg-blue-900 py-14 text-center text-white">
+    <footer class="flex justify-center items-center bg-blue-900 py-14 text-center text-white w-full">
           <div class="max-w-2xs">
             <h1 class="font-bold text-2xl ">Influencer products</h1>
             <p class="text-sm font-bold">Copyright © 2020  influencer products</p>
