--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
           </div>
     </footer> -->
     <!-- https://shajjadulferdous.github.io/tailwind-basic/ -->
-     <footer class="flex justify-center items-center bg-blue-900 py-14 text-center text-white w-full">
-          <div class="max-w-2xs">
+     <footer class="flex justify-center items-center  py-14 text-center w-full border-amber-400 border-2">
+          <div class="max-w-2xs border-amber-950 sol">
             <h1 class="font-bold text-2xl ">Influencer products</h1>
             <p class="text-sm font-bold">Copyright © 2020  influencer products</p>
             <p>All rights reserved</p>
