--- a/index.html
+++ b/index.html
@@ -167,14 +167,16 @@
           </div>
     </footer> -->
     <!-- https://shajjadulferdous.github.io/tailwind-basic/ -->
-     <footer class="flex justify-center items-center  py-14 text-center w-full border-amber-400 border-2">
-          <div class="max-w-2xs border-amber-950 sol">
+     <footer class="flex justify-center items-center  py-14 text-center w-full bg-blue-900">
+          <div class=" border-amber-950 sol">
             <h1 class="font-bold text-2xl ">Influencer products</h1>
             <p class="text-sm font-bold">Copyright © 2020  influencer products</p>
             <p>All rights reserved</p>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
+            <div>
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-twitter"></i>
+            </div>
           </div>
     </footer>
 </body>
