--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
     </footer> -->
     <!-- https://shajjadulferdous.github.io/tailwind-basic/ -->
-     <footer class="flex justify-center items-center  py-14 text-center w-full bg-blue-900">
+     <footer class="flex justify-center items-center  py-14 text-center w-full text-white bg-blue-900">
           <div class=" border-amber-950 sol">
             <h1 class="font-bold text-2xl ">Influencer products</h1>
             <p class="text-sm font-bold">Copyright © 2020  influencer products</p>
