--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
+<body class="m-0 p-0 box-border">
     <header class="w-6xl mx-auto mt-20 mb-[100px]">
         <nav class="flex justify-between">
             <h2 class="text-2xl font-semibold">Influencer products</h2>
@@ -167,7 +167,7 @@
           </div>
     </footer> -->
     <!-- https://shajjadulferdous.github.io/tailwind-basic/ -->
-     <footer class="flex justify-center items-center  py-14 text-center w-full text-white bg-blue-900">
+     <footer class="flex justify-center items-center  py-14 text-center  text-white bg-blue-900">
           <div class=" border-amber-950 sol">
             <h1 class="font-bold text-2xl ">Influencer products</h1>
             <p class="text-sm font-bold">Copyright © 2020  influencer products</p>
