--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
     </footer> -->
     <!-- https://shajjadulferdous.github.io/tailwind-basic/ -->
-     <footer class="flex justify-center items-center  py-14 text-center  text-white bg-blue-900">
+     <!-- <footer class="flex justify-center items-center  py-14 text-center  text-white bg-blue-900">
           <div class=" border-amber-950 sol">
             <h1 class="font-bold text-2xl ">Influencer products</h1>
             <p class="text-sm font-bold">Copyright © 2020  influencer products</p>
@@ -178,6 +178,19 @@
                   <i class="fa-brands fa-twitter"></i>
             </div>
           </div>
-    </footer>
+    </footer> -->
+    <footer class="w-full bg-blue-900 text-white py-8 flex flex-col items-center text-center">
+  <div class="space-y-2">
+    <h1 class="font-bold text-2xl">Influencer products</h1>
+    <p class="text-sm font-bold">Copyright © 2020 influencer products</p>
+    <p>All rights reserved</p>
+    <div class="flex justify-center space-x-4 text-lg mt-2">
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-twitter"></i>
+    </div>
+  </div>
+</footer>
+
 </body>
 </html>
