--- a/index.html
+++ b/index.html
@@ -156,18 +156,7 @@
             </div>
     </section>
      
-    <!-- <footer class="flex justify-center items-center bg-blue-900 py-14 text-center text-white w-full">
-          <div class="max-w-2xs">
-            <h1 class="font-bold text-2xl ">Influencer products</h1>
-            <p class="text-sm font-bold">Copyright © 2020  influencer products</p>
-            <p>All rights reserved</p>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
-          </div>
-    </footer> -->
-    <!-- https://shajjadulferdous.github.io/tailwind-basic/ -->
-     <!-- <footer class="flex justify-center items-center  py-14 text-center  text-white bg-blue-900">
+     <footer class="flex justify-center items-center  py-14 text-center  text-white bg-blue-900">
           <div class=" border-amber-950 sol">
             <h1 class="font-bold text-2xl ">Influencer products</h1>
             <p class="text-sm font-bold">Copyright © 2020  influencer products</p>
@@ -178,19 +167,7 @@
                   <i class="fa-brands fa-twitter"></i>
             </div>
           </div>
-    </footer> -->
-    <footer class="w-full bg-blue-900 text-white py-8 flex flex-col items-center text-center">
-  <div class="space-y-2">
-    <h1 class="font-bold text-2xl">Influencer products</h1>
-    <p class="text-sm font-bold">Copyright © 2020 influencer products</p>
-    <p>All rights reserved</p>
-    <div class="flex justify-center space-x-4 text-lg mt-2">
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-twitter"></i>
-    </div>
-  </div>
-</footer>
-
+    </footer>
+    
 </body>
 </html>
