--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main class="w-6xl mx-auto grid grid-cols-3 justify-center items-center gap-7">
          <div class="shadow p-2 cursor-pointer">
             <div>
-                <img src="images/tripod.png" class="w-full  alt="picture added">
+                <img src="images/tripod.png" class="w-full"  alt="picture added">
             </div>
                 <h1 class="text-3xl">Flex Tripod</h1>
                 <p class="text-[rgba(0, 0, 0, 0.87)] text-2xl ">$50.48</p>
@@ -55,7 +55,7 @@
          </div>
          <div class="shadow p-2 cursor-pointer">
             <div>
-                <img src="images/action.png" class="w-full  alt="picture added">
+                <img src="images/action.png" class="w-full"  alt="picture added">
             </div>
                 <h1 class="text-3xl">Flex Tripod</h1>
                 <p class="text-[rgba(0, 0, 0, 0.87)] text-2xl ">$50.48</p>
@@ -66,7 +66,7 @@
          </div>
          <div class="shadow p-2 cursor-pointer">
             <div>
-                <img src="images/camera.png" class="w-full  alt="picture added">
+                <img src="images/camera.png" class="w-full"  alt="picture added">
             </div>
                 <h1 class="text-3xl">Flex Tripod</h1>
                 <p class="text-[rgba(0, 0, 0, 0.87)] text-2xl ">$50.48</p>
@@ -77,7 +77,7 @@
          </div>
          <div class="shadow p-2 cursor-pointer">
             <div>
-                <img src="images/drone.png" class="w-full  alt="picture added">
+                <img src="images/drone.png" class="w-full"  alt="picture added">
             </div>
                 <h1 class="text-3xl">Flex Tripod</h1>
                 <p class="text-[rgba(0, 0, 0, 0.87)] text-2xl ">$50.48</p>
@@ -88,7 +88,7 @@
          </div>
          <div class="shadow p-2 cursor-pointer">
             <div>
-                <img src="images/single-light.png" class="w-full  alt="picture added">
+                <img src="images/single-light.png" class="w-full"  alt="picture added">
             </div>
                 <h1 class="text-3xl">Flex Tripod</h1>
                 <p class="text-[rgba(0, 0, 0, 0.87)] text-2xl ">$50.48</p>
@@ -99,7 +99,7 @@
          </div>
          <div class="shadow p-2 cursor-pointer">
             <div>
-                <img src="images/lights.png" class="w-full  alt="picture added">
+                <img src="images/lights.png" class="w-full"  alt="picture added">
             </div>
                 <h1 class="text-3xl">Flex Tripod</h1>
                 <p class="text-[rgba(0, 0, 0, 0.87)] text-2xl ">$50.48</p>
@@ -110,7 +110,7 @@
          </div>
          <div class="shadow p-2 cursor-pointer">
             <div>
-                <img src="images/mic.png" class="w-full  alt="picture added">
+                <img src="images/mic.png" class="w-full"  alt="picture added">
             </div>
                 <h1 class="text-3xl">Flex Tripod</h1>
                 <p class="text-[rgba(0, 0, 0, 0.87)] text-2xl ">$50.48</p>
@@ -121,7 +121,7 @@
          </div>
          <div class="shadow p-2 cursor-pointer">
             <div>
-                <img src="images/setup.png" class="w-full  alt="picture added">
+                <img src="images/setup.png" class="w-full"  alt="picture added">
             </div>
                 <h1 class="text-3xl">Flex Tripod</h1>
                 <p class="text-[rgba(0, 0, 0, 0.87)] text-2xl ">$50.48</p>
